<resources>
    <string name="app_name">Mimořádnosti</string>

    <string name="title_home">Domů</string>
    <string name="title_disruptions">Mimořádnosti</string>
    <string name="title_about">O aplikaci</string>
    <string name="title_disruption">Podrobnosti</string>
    <string name="title_map">Mapa</string>

    <string name="button_open_app_settings">Otevřít nastavení</string>
    <string name="info_blocked_notifications">Zobrazení oznámení z aplikace je blokováno. V nastavení aplikace zkontrolujte sekce <b>Oznámení</b> a <b>Oprávnění</b>, že je tam vše povoleno, tak aby se upozornění správně zobrazovala.</string>
    <string name="info_unused_app_restrictions_1">Aby se upozornění zobrazovala, i když appku nějaký čas neotevřete, je potřeba pro ni vypnout omezení, která Android nepoužívaným aplikacím nastavuje.</string>
    <!-- info_unused_app_restrictions_2 is different for SDK v33 and up -->
    <string name="info_unused_app_restrictions_2">V nastavení "<b>O aplikaci</b>", dole v sekci "<b>Nepoužívané aplikace</b>" prosím <u>vypněte</u> volbu "<b>Odebrat oprávnění a uvolnit místo</b>".</string>

    <string name="line_name">Linka %1$s</string>
    <string name="button_remove_description">Odebrat</string>
    <string name="subscriptions_empty">Přihlaste se k odběru upozornění na mimořídnosti v provozu na některé z linek pražské MHD</string>
    <string name="input_line_hint">Jméno linky (např.: A, 1, 100 nebo P1)</string>
    <string name="input_line_wrong_name">Zadané jméno je neplatné!</string>
    <string name="fcm_subscribe_failure">Přihlášení se nezdařilo.</string>
    <string name="button_subscribe">Přidat</string>

    <string name="disruptions_empty">Zatím žádné upozornění na mimořádnost v MHD.</string>
    <string name="button_to_subscriptions">Přihlaste se k odběru</string>
    <plurals name="label_lines">
        <item quantity="one">Linka:</item>
        <item quantity="other">Linky:</item>
    </plurals>
    <string name="refresh">Aktualizovat</string>

    <string name="version">Verze: %1$s</string>
    <string name="oss_licenses">Licence použitých komponent</string>
    <string name="privacy_policy_link"><u><a href="https://goo.gl/jytXTT">Ochrana soukromí</a></u></string>
    <string name="source_code_link"><u><a href="https://goo.gl/S3CG25">Zdrojové kódy</a></u></string>
    <string name="send_email"><u><a href="mailto:zkkn.apps+mimoradnosti@gmail.com">Napsat email vvývojáři</a></u></string>
    <string name="data_source">Data poskytuje:</string>
    <string name="ropid">Regionální organizátor Pražské integrované dopravy</string>
    <string name="ropid_link"><u><a href="https://pid.cz">www.PID.cz</a></u></string>
    <string name="golemio">Golemio – Datová platforma Prahy</string>
    <string name="golemio_link"><u><a href="https://golemio.cz/">www.GOLEMIO.cz</a></u></string>
    <string name="share">Přijde vám aplikace užitečná?</string>
    <string name="button_share">Sdílet odkaz ke stažení</string>
    <string-array name="button_share_alternatives">
        <item>Šiřte její slávu!</item>
        <item>Pošlete ji do světa!</item>
        <item>Tak nebuďte lakomí\na pošlete ji dál!</item>
    </string-array>


    <string name="dialog_debug_title">Info pro ladění</string>
    <string name="dialog_debug_message">
        Subscriptions Refresh: %1$tY-%1$tm-%1$td&#160;%1$tH:%1$tM:%1$tS\n
        \nLast Heartbeat: %2$tY-%2$tm-%2$td&#160;%2$tH:%2$tM:%2$tS (Sent: %3$tY-%3$tm-%3$td&#160;%3$tH:%3$tM:%3$tS)\n
        \nStandby Bucket: %4$d\n
    </string>
    <string name="dialog_debug_ok">OK</string>

    <string name="notification_channel_disruptions_name">Upozornění na mimořádnosti</string>
    <string name="notification_action_detail">Info na webu PID</string>
    <string name="notification_action_cancel">Skrýt</string>
    <plurals name="notification_lines">
        <item quantity="one">Linka %1$s</item>
        <item quantity="other">Linky %1$s</item>
    </plurals>

</resources>
